--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,16 @@ env:
 r_github_packages:
   - rstudio/bookdown
   
-install: true
+install: 
+   - Rscript -e "if (!require('ggplot2')) install.packages('ggplot2')"
+   - Rscript -e "if (!require('devtools')) install.packages('devtools')"
+   - Rscript -e "if (!require('xml2')) install.packages('xml2')"
+   - Rscript -e "if (!require('dplyr')) install.packages('dplyr')"
+   - Rscript -e "if (!require('tidyr')) install.packages('tidyr')"
+   - Rscript -e "if (!require('readr')) install.packages('readr')"
+   - Rscript -e "if (!require('bookdown')) devtools::install_github('rstudio/bookdown')"
+
+
 
 before_script:
   - chmod +x ./_build.sh
