--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,11 @@ install:
    - Rscript -e "if (!require('tidyr')) install.packages('tidyr')"
    - Rscript -e "if (!require('readr')) install.packages('readr')"
    - Rscript -e "if (!require('bookdown')) devtools::install_github('rstudio/bookdown')"
-
-
-
+   - Rscript -e "if (!require('ggmap')) install.packages('ggmap')"
+   - Rscript -e "if (!require('rgdal')) install.packages('rgdal')"
+   - Rscript -e "if (!require('rgeos')) install.packages('rgeos')"
+   - Rscript -e "if (!require('maptools')) install.packages('maptools')"
+   
 before_script:
   - chmod +x ./_build.sh
   - chmod +x ./_deploy.sh
@@ -29,6 +31,6 @@ script:
 sudo: false
 
 cache:
-  packages: false
+  packages: yes
   directories:
     - $TRAVIS_BUILD_DIR/_bookdown_files  
