--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
     packages:
       - libxml2-dev
       - libgdal-dev
-      - libgeos-dev
+      - libproj-dev
       
 r_packages:
   - raster
