--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
   apt:
     packages:
       - libxml2-dev
-      - libgdal-dev
+      - libgdal1-dev
       - libproj-dev
       
 r_packages:
