--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
       - libxml2-dev
       - libgdal-dev
       - libproj-dev
+      - libhdf5-serial-dev
       
 r_packages:
   - raster
