--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
       - libgdal-dev
       - libproj-dev
       - libhdf5-serial-dev
+      - libhdf5-dev
       
 r_packages:
   - raster
