--- a/.travis.yml
+++ b/.travis.yml
@@ -19,18 +19,7 @@ r_packages:
 r_github_packages:
   - rstudio/bookdown
   
-install: 
-   - Rscript -e "if (!require('ggplot2')) install.packages('ggplot2')"
-   - Rscript -e "if (!require('devtools')) install.packages('devtools')"
-   - Rscript -e "if (!require('xml2')) install.packages('xml2')"
-   - Rscript -e "if (!require('dplyr')) install.packages('dplyr')"
-   - Rscript -e "if (!require('tidyr')) install.packages('tidyr')"
-   - Rscript -e "if (!require('readr')) install.packages('readr')"
-   - Rscript -e "if (!require('bookdown')) devtools::install_github('rstudio/bookdown')"
-   - Rscript -e "if (!require('ggmap')) install.packages('ggmap')"
-   - Rscript -e "if (!require('rgdal')) install.packages('rgdal')"
-   - Rscript -e "if (!require('rgeos')) install.packages('rgeos')"
-   - Rscript -e "if (!require('maptools')) install.packages('maptools')"
+install: true
    
 before_script:
   - chmod +x ./_build.sh
