--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,8 @@ r_packages:
   - rasterVis
   - tmap
   
-
 r_github_packages:
   - rstudio/bookdown
-  
-install: true
    
 before_script:
   - chmod +x ./_build.sh
@@ -32,6 +29,6 @@ script:
 sudo: false
 
 cache:
-  packages: yes
+  packages: false
   directories:
     - $TRAVIS_BUILD_DIR/_bookdown_files  
