add ubuntu 12.04 libs to compile rgdal

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,15 @@ addons:
     packages:
       - libxml2-dev
       - libproj-dev
+      - libgdal1-dev
+      - gdal-bin
+      - libgdal1h
       
 r_packages:
   - raster
   - rasterVis
   - tmap
+  - readxl
   
 r_github_packages:
   - rstudio/bookdown
