--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
       - libxml2-dev
       - libproj-dev
       - libgdal1-dev
+      - libgdal-dev
       - gdal-bin
       - libgdal1h
       
