--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,6 @@ addons:
     packages:
       - libxml2-dev
       - libproj-dev
-      - libgdal1-dev
-      - libgdal-dev
-      - gdal-bin
-      - libgdal1h
       
 r_packages:
   - raster
@@ -23,6 +19,15 @@ r_packages:
 r_github_packages:
   - rstudio/bookdown
    
+before_install:
+  - sudo add-apt-repository -ry "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
+  - sudo add-apt-repository -ry "ppa:marutter/c2d4u"
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libgdal1-dev gdal-bin libgdal1h
+  - sudo add-apt-repository -y "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
+  - sudo add-apt-repository -y "ppa:marutter/c2d4u"
+  - sudo apt-get update -qq
+  
 before_script:
   - chmod +x ./_build.sh
   - chmod +x ./_deploy.sh
