--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_install:
   - sudo add-apt-repository -ry "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
   - sudo add-apt-repository -ry "ppa:marutter/c2d4u"
   - sudo apt-get update -qq
-  - sudo apt-get install -y libgdal1-dev gdal-bin libgdal1h
+  - sudo apt-get install -y libgdal1-dev gdal-bin libgdal1h libgdal1
   - sudo add-apt-repository -y "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
   - sudo add-apt-repository -y "ppa:marutter/c2d4u"
   - sudo apt-get update -qq
