--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,7 @@ addons:
     packages:
       - libxml2-dev
       - libproj-dev
-
-r_binary_packages:
-  - rgdal
+      - gdal-bin 
   
 r_packages:
   - raster
@@ -26,6 +24,7 @@ r_packages:
   - tidyr
   - readr
   - rgeos
+  - rgdal
   - leaflet
   - shiny
   
@@ -37,7 +36,7 @@ before_install:
   - sudo add-apt-repository -ry "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
   - sudo add-apt-repository -ry "ppa:marutter/c2d4u"
   - sudo apt-get update -qq
-  - sudo apt-get install -y libgdal1-dev gdal-bin libgdal1 libgdal-dev
+  - sudo apt-get install -y libgdal1-dev libgdal1h
   - sudo add-apt-repository -y "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
   - sudo add-apt-repository -y "ppa:marutter/c2d4u"
   - sudo apt-get update -qq
