--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ addons:
   apt:
     packages:
       - libxml2-dev
-      - libproj-dev
       - gdal-bin 
   
 r_packages:
@@ -36,7 +35,7 @@ before_install:
   - sudo add-apt-repository -ry "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
   - sudo add-apt-repository -ry "ppa:marutter/c2d4u"
   - sudo apt-get update -qq
-  - sudo apt-get install -y libgdal1-dev libgdal1h
+  - sudo apt-get install -y libgdal-dev libproj-dev
   - sudo add-apt-repository -y "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
   - sudo add-apt-repository -y "ppa:marutter/c2d4u"
   - sudo apt-get update -qq
