--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,22 @@ addons:
   apt:
     packages:
       - libxml2-dev
-      - gdal-bin 
-  
+      - gdal-bin
+      - libcurl4-gnutls-dev
+      - libxml2-dev
+      - libssl-dev
+      - libopenblas-base
+      - libgdal-dev
+      - libgeos-dev
+      - libproj-dev
+      - libcairo2-dev
+      - libx11-xcb-dev
+      - libxt-dev
+      - libx11-dev
+      - mesa-common-dev
+      - libglu1-mesa-dev
+      - netcdf-bin
+
 r_packages:
   - raster
   - rasterVis
@@ -26,19 +40,10 @@ r_packages:
   - rgdal
   - leaflet
   - shiny
-  
+
 r_github_packages:
   - rstudio/bookdown
   - hadley/readxl
-  
-before_install:
-  - sudo add-apt-repository -ry "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
-  - sudo add-apt-repository -ry "ppa:marutter/c2d4u"
-  - sudo apt-get update -qq
-  - sudo apt-get install -y libgdal-dev libproj-dev
-  - sudo add-apt-repository -y "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
-  - sudo add-apt-repository -y "ppa:marutter/c2d4u"
-  - sudo apt-get update -qq
   
 before_script:
   - chmod +x ./_build.sh
