--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,15 @@ r_github_packages:
   - rstudio/bookdown
   - hadley/readxl
   
+before_install:
+  - sudo add-apt-repository -ry "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
+  - sudo add-apt-repository -ry "ppa:marutter/c2d4u"
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libminc-dev 
+  - sudo add-apt-repository -y "deb http://cran.rstudio.com//bin/linux/ubuntu $(lsb_release -cs)/"
+  - sudo add-apt-repository -y "ppa:marutter/c2d4u"
+  - sudo apt-get update -qq  
+  
 before_script:
   - chmod +x ./_build.sh
   - chmod +x ./_deploy.sh
