--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,6 @@ script:
   - ./_deploy.sh
 
 cache:
-  packages: false
+  packages: true
   directories:
     - $TRAVIS_BUILD_DIR/_bookdown_files  
