--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,6 @@ script:
   - ./_deploy.sh
 
 cache:
-  packages: true
+  packages: false
   directories:
     - $TRAVIS_BUILD_DIR/_bookdown_files  
