--- a/.travis.yml
+++ b/.travis.yml
@@ -55,4 +55,7 @@ script:
   - ./_build.sh
   - ./_deploy.sh
 
-
+cache:
+  packages: false
+  directories:
+    - $TRAVIS_BUILD_DIR/_bookdown_files  
